Fixed Padding on mobile Sidebar

--- a/src/components/Profile/ProfileCreated/ProfileCreated.scss
+++ b/src/components/Profile/ProfileCreated/ProfileCreated.scss
@@ -32,7 +32,7 @@
       z-index: 10;
       top: 0px;
 
-      padding-top: 10px;
+      padding-top: 20px;
     }
   }
 
